--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -52,8 +52,8 @@
         android:id="@+id/button2"
         android:layout_width="155dp"
         android:layout_height="47dp"
-        android:text="Сенсей"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="227dp" />
+        android:text="Сенсей лох"
+        tools:layout_editor_absoluteX="87dp"
+        tools:layout_editor_absoluteY="232dp" />
 
 </android.support.constraint.ConstraintLayout>
