--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         android:id="@+id/button2"
         android:layout_width="155dp"
         android:layout_height="47dp"
-        android:text="Сенсей лох"
+        android:text="Сенсей не лох"
         tools:layout_editor_absoluteX="87dp"
         tools:layout_editor_absoluteY="232dp" />
 
