--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -17,43 +17,35 @@
         app:layout_constraintHorizontal_bias="0.501" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/exit"
         android:layout_width="155dp"
         android:layout_height="47dp"
         android:text="выход"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="459dp" />
+        tools:layout_editor_absoluteX="213dp"
+        tools:layout_editor_absoluteY="316dp" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:text="выход"
-        tools:layout_editor_absoluteX="346dp"
-        tools:layout_editor_absoluteY="459dp" />
-
-    <Button
-        android:id="@+id/button5"
+        android:id="@+id/dungeon"
         android:layout_width="155dp"
         android:layout_height="47dp"
         android:text="подземелье"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="459dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="316dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/adventure"
         android:layout_width="155dp"
         android:layout_height="47dp"
         android:text="Приключение"
-        tools:layout_editor_absoluteX="346dp"
-        tools:layout_editor_absoluteY="227dp" />
+        tools:layout_editor_absoluteX="213dp"
+        tools:layout_editor_absoluteY="138dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/teacher"
         android:layout_width="155dp"
         android:layout_height="47dp"
-        android:text="Сенсей не лох"
-        tools:layout_editor_absoluteX="87dp"
-        tools:layout_editor_absoluteY="232dp" />
+        android:text="Сенсей"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="138dp" />
 
 </android.support.constraint.ConstraintLayout>
