--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -14,38 +14,55 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintHorizontal_bias="0.501"
+        android:id="@+id/textView" />
 
     <Button
         android:id="@+id/exit"
         android:layout_width="155dp"
         android:layout_height="47dp"
         android:text="выход"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="340dp" />
+        android:layout_marginBottom="423dp"
+        app:layout_constraintBottom_toTopOf="@+id/dungeon"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView" />
 
     <Button
         android:id="@+id/dungeon"
         android:layout_width="155dp"
         android:layout_height="47dp"
         android:text="подземелье"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="280dp" />
+        android:layout_marginBottom="-517dp"
+        app:layout_constraintBottom_toTopOf="@+id/exit"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView" />
 
     <Button
         android:id="@+id/adventure"
         android:layout_width="155dp"
         android:layout_height="47dp"
         android:text="Приключение"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="199dp" />
+        android:layout_marginBottom="58dp"
+        app:layout_constraintBottom_toTopOf="@+id/dungeon"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView" />
 
     <Button
         android:id="@+id/teacher"
         android:layout_width="155dp"
         android:layout_height="47dp"
         android:text="Сенсей"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="137dp" />
+        android:layout_marginBottom="201dp"
+        app:layout_constraintBottom_toTopOf="@+id/adventure"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView" />
 
 </android.support.constraint.ConstraintLayout>
