--- a/src/main/res/layout/activity_adventure.xml
+++ b/src/main/res/layout/activity_adventure.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.ton.hack.abstracktika.Adventure">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="193dp" />
 </android.support.constraint.ConstraintLayout>
