--- a/src/main/res/layout/activity_main2.xml
+++ b/src/main/res/layout/activity_main2.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.ton.hack.abstracktika.Main2Activity">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="120dp"
+        tools:layout_editor_absoluteY="142dp" />
 </android.support.constraint.ConstraintLayout>
