--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,63 +6,36 @@
     android:layout_height="match_parent"
     tools:context="com.ton.hack.abstracktika.MainActivity">
 
-    <TextView
-        android:layout_width="164dp"
-        android:layout_height="19dp"
-        android:text="Скоро здесь будет игра!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        android:id="@+id/textView" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="26dp">
 
-    <Button
-        android:id="@+id/exit"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:text="выход"
-        android:layout_marginBottom="423dp"
-        app:layout_constraintBottom_toTopOf="@+id/dungeon"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
+        <Button
+            android:id="@+id/teacher"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:text="Сенсей"
+            tools:layout_editor_absoluteX="123dp"
+            tools:layout_editor_absoluteY="87dp" />
 
-    <Button
-        android:id="@+id/dungeon"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:text="подземелье"
-        android:layout_marginBottom="-517dp"
-        app:layout_constraintBottom_toTopOf="@+id/exit"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
+        <Button
+            android:id="@+id/adventure"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:text="Приключение"
+            tools:layout_editor_absoluteX="115dp"
+            tools:layout_editor_absoluteY="206dp" />
 
-    <Button
-        android:id="@+id/adventure"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:text="Приключение"
-        android:layout_marginBottom="58dp"
-        app:layout_constraintBottom_toTopOf="@+id/dungeon"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
-
-    <Button
-        android:id="@+id/teacher"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:text="Сенсей"
-        android:layout_marginBottom="201dp"
-        app:layout_constraintBottom_toTopOf="@+id/adventure"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
+        <Button
+            android:id="@+id/dungeon"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:text="подземелье"
+            tools:layout_editor_absoluteX="115dp"
+            tools:layout_editor_absoluteY="313dp" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
