--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -14,15 +14,6 @@
         tools:layout_editor_absoluteX="115dp"
         tools:layout_editor_absoluteY="232dp" />
 
-    <Button
-        android:id="@+id/teacher"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="36dp"
-        android:text="Сенсей"
-        app:layout_constraintBottom_toTopOf="@+id/adventure"
-        tools:layout_editor_absoluteX="115dp" />
-
     <TextView
         android:layout_width="164dp"
         android:layout_height="19dp"
@@ -48,46 +39,26 @@
 
     <Button
         android:id="@+id/dungeon"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
+        android:layout_width="153dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:text="подземелье"
-        android:layout_marginBottom="-517dp"
         app:layout_constraintBottom_toTopOf="@+id/exit"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
-
-    <Button
-        android:id="@+id/adventure"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:text="Приключение"
-        android:layout_marginBottom="58dp"
-        app:layout_constraintBottom_toTopOf="@+id/dungeon"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintLeft_toLeftOf="@+id/textView"
+        app:layout_constraintRight_toRightOf="@+id/textView" />
 
     <Button
         android:id="@+id/teacher"
         android:layout_width="155dp"
         android:layout_height="47dp"
-        android:text="Сенсей"
-        android:layout_marginBottom="201dp"
-        app:layout_constraintBottom_toTopOf="@+id/adventure"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
+        android:layout_marginRight="8dp"
+        android:text="Сенсей"
+        app:layout_constraintLeft_toLeftOf="@+id/textView"
+        app:layout_constraintRight_toRightOf="@+id/textView"
+        tools:layout_editor_absoluteY="117dp" />
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
 </android.support.constraint.ConstraintLayout>
