--- a/src/main/res/layout/activity_adventure.xml
+++ b/src/main/res/layout/activity_adventure.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.ton.hack.abstracktika.Adventure">
 
     <TextView
@@ -15,6 +17,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
+    <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+        android:gravity="center"
+        android:src="@drawable/adventure_backgroun" />
 
     <Button
         android:id="@+id/first"
