--- a/src/main/res/layout/activity_adventure.xml
+++ b/src/main/res/layout/activity_adventure.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/adventure_backgroun1"
     tools:context="com.ton.hack.abstracktika.Adventure">
 
     <TextView
@@ -17,9 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
-    <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-        android:gravity="center"
-        android:src="@drawable/adventure_backgroun" />
 
     <Button
         android:id="@+id/first"
