--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -10,87 +10,76 @@
 
     <Button
         android:id="@+id/adventure"
-        android:layout_width="231dp"
-        android:layout_height="wrap_content"
-
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="72dp"
+        android:layout_width="318dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
+
         android:text="Приключение"
-        app:layout_constraintBottom_toTopOf="@+id/dungeon"
-        app:layout_constraintEnd_toEndOf="@+id/dungeon"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/dungeon"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Settings"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teacher"
         tools:ignore="MissingConstraints" />
 
 
     <Button
         android:id="@+id/dungeon"
-        android:layout_width="227dp"
-        android:layout_height="45dp"
+        android:layout_width="340dp"
+        android:layout_height="50dp"
 
-        android:layout_marginBottom="52dp"
+        android:layout_marginTop="8dp"
         android:text="подземелье"
-        app:layout_constraintBottom_toTopOf="@+id/Settings"
-        app:layout_constraintEnd_toEndOf="@+id/Settings"
+
+        app:layout_constraintBottom_toTopOf="@+id/teacher"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/Settings"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="DuplicateIds" />
 
 
     <Button
         android:id="@+id/teacher"
-        android:layout_width="222dp"
-        android:layout_height="42dp"
-
-        android:layout_marginBottom="48dp"
+        android:layout_width="328dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="8dp"
         android:text="Сенсей"
-        app:layout_constraintBottom_toTopOf="@+id/hero"
-        app:layout_constraintEnd_toEndOf="@+id/hero"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/hero" />
+
+        app:layout_constraintBottom_toTopOf="@+id/adventure"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dungeon" />
 
 
     <Button
         android:id="@+id/Settings"
-        android:layout_width="238dp"
-        android:layout_height="50dp"
-
+        android:layout_width="299dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="36dp"
         android:text="Настройки"
-        app:layout_constraintBottom_toTopOf="@+id/teacher"
-        app:layout_constraintEnd_toEndOf="@+id/teacher"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="@+id/teacher"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adventure"
+        tools:ignore="MissingConstraints"
+
+        />
 
     <Button
         android:id="@+id/hero"
-        android:layout_width="222dp"
+        android:layout_width="306dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="88dp"
         android:text="о персонаже"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/info"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="@+id/info" />
-
-    <ImageButton
-        android:id="@+id/info"
-        android:layout_width="62dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hero"
-        app:layout_constraintVertical_bias="0.6"
-        app:srcCompat="@android:drawable/ic_menu_info_details" />
+        tools:layout_editor_absoluteY="436dp" />
 
 </android.support.constraint.ConstraintLayout>
