--- a/src/main/res/layout/activity_adventure.xml
+++ b/src/main/res/layout/activity_adventure.xml
@@ -17,21 +17,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
-    <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-        android:gravity="center"
-        android:src="@drawable/adventure_backgroun" />
 
     <Button
         android:id="@+id/first"
         android:layout_width="69dp"
         android:layout_height="40dp"
-        android:text="1"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:layout_marginBottom="64dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/textView3"
-        android:layout_marginLeft="0dp"
+        android:text="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.263"
         app:layout_constraintLeft_toLeftOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.263" />
+        app:layout_constraintRight_toRightOf="@+id/textView3" />
 
 </android.support.constraint.ConstraintLayout>
